# BuildLLm

./: Untitled-1.py  ch2.ipynb  ch3.ipynb  pyproject.toml  requirements.txt
tarea1/: corpus_codigo.txt  corpus_colombia.txt  tarea1.ipynb
