[project]
name = "buildllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.0",
    "matplotlib>=3.7.1",
    "numpy>=1.26,<2.1",
    "pandas>=2.2.1",
    "psutil>=5.9.5",
    "tensorflow>=2.16.2 ; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "tensorflow>=2.18.0 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "tiktoken>=0.9.0",
    "torch>=2.2.2 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "torch>=2.2.2,<2.6 ; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "tqdm>=4.66.1",
]
